--- a/agree/res/layout/activity_binding_phone.xml
+++ b/agree/res/layout/activity_binding_phone.xml
@@ -37,13 +37,13 @@
                 android:textSize="@dimen/title_left_size" />
         </RelativeLayout>
 
-        <RelativeLayout
+        <!-- <RelativeLayout
             android:id="@+id/binding_phone_OK_layout"
             android:layout_width="@dimen/title_right_width"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-             >
+            android:visibility="gone" >
 
             <TextView
                 android:id="@+id/binding_phone_OK"
@@ -54,11 +54,11 @@
                 android:text="@string/bindingphone_title_right"
                 android:textColor="@drawable/title_right_color"
                 android:textSize="@dimen/title_right_size" />
-        </RelativeLayout>
+        </RelativeLayout> -->
 
         <RelativeLayout
             android:id="@+id/binding_phone_send_layout"
-            android:layout_width="80.0dp"
+            android:layout_width="@dimen/title_right_width"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
@@ -81,9 +81,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/binding_phone_layout"
         android:layout_centerHorizontal="true"
-        android:background="#efefef"
-        android:visibility="gone"
-         >
+        android:background="#efefef" >
 
         <RelativeLayout
             android:id="@+id/relativeLayout1"
@@ -100,7 +98,7 @@
                 android:layout_marginTop="35.0dp"
                 android:text="@string/bindingphone_prompt"
                 android:textColor="#808080"
-                android:textSize="12.0sp" />
+                android:textSize="13.0sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -109,7 +107,7 @@
             android:layout_height="50.0dp"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/relativeLayout1"
-            android:background="@drawable/background" >
+            android:background="#ffffff" >
 
             <EditText
                 android:id="@+id/binding_phone_phone"
@@ -123,7 +121,8 @@
                 android:ems="10"
                 android:gravity="left|center"
                 android:hint="@string/bindingphone_hint"
-                android:textSize="17.0sp" >
+                android:textColorHint="#c9c9c9"
+                android:textSize="15.0sp" >
 
                 <requestFocus />
             </EditText>
@@ -145,7 +144,7 @@
                 android:layout_marginTop="10.0dp"
                 android:text="@string/bindingphone_prompt_1"
                 android:textColor="#808080"
-                android:textSize="12.0sp" />
+                android:textSize="13.0sp" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -157,58 +156,65 @@
         android:layout_below="@+id/binding_phone_layout"
         android:layout_centerHorizontal="true"
         android:background="#efefef"
-         >
+        android:visibility="gone" >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40.0dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="35.0dp" >
+            android:layout_marginTop="50.0dp" >
 
-            <TextView
-                android:id="@+id/textView2"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="50dp"
-                android:text="请输入" />
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" >
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView2"
-                android:layout_alignBottom="@+id/textView2"
-                android:layout_toRightOf="@+id/textView2"
-                android:text="4"
-                android:paddingLeft="5.0dp"
-                android:paddingRight="5.0dp"
-                android:textSize="20.0sp"
-                android:textColor="#00e3e3"
-                 />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:text="请输入"
+                    android:textColor="#535353"
+                    android:textSize="18.0sp" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/textView3"
-                android:layout_toRightOf="@+id/textView3"
-                android:text="位验证码" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/textView2"
+                    android:layout_alignBottom="@+id/textView2"
+                    android:layout_toRightOf="@+id/textView2"
+                    android:paddingLeft="5.0dp"
+                    android:paddingRight="5.0dp"
+                    android:text="4"
+                    android:textColor="#88d4cc"
+                    android:textSize="25.0sp" />
 
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/textView3"
+                    android:layout_toRightOf="@+id/textView3"
+                    android:text="位验证码"
+                    android:textColor="#535353"
+                    android:textSize="18.0sp" />
+            </RelativeLayout>
         </RelativeLayout>
-        
+
         <com.BJ.utils.BindingPhoneVerifyCodeView
             android:id="@+id/bindingPhoneVerifyCodeView1"
             android:layout_width="match_parent"
             android:layout_height="50.0dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="40.0dp"
-            android:layout_marginRight="40.0dp"
-            android:layout_marginTop="100.0dp"
-            android:background="#efefef"/>
-
+            android:layout_marginLeft="70.0dp"
+            android:layout_marginRight="70.0dp"
+            android:layout_marginTop="130.0dp"
+            android:background="#efefef" />
     </RelativeLayout>
 
 </RelativeLayout>
