--- a/agree/res/layout/activity_more.xml
+++ b/agree/res/layout/activity_more.xml
@@ -92,8 +92,9 @@
                 android:background="#e3e3e3"
                 android:gravity="center"
                 android:text="@string/more_creator_cancel"
-                android:textColor="#000000"
-                android:textSize="17.0sp" />
+                android:textSize="17.0sp"
+                android:textColor="#535353"
+                 />
         </RelativeLayout>
 
         <RelativeLayout
@@ -115,8 +116,9 @@
                 android:background="#e3e3e3"
                 android:gravity="center"
                 android:text="@string/more_member_share"
-                android:textColor="#000000"
-                android:textSize="17.0sp" />
+                android:textSize="17.0sp" 
+                android:textColor="#535353"
+                />
         </RelativeLayout>
 
         <RelativeLayout
@@ -134,8 +136,9 @@
                 android:background="#e3e3e3"
                 android:gravity="center"
                 android:text="@string/more_creator_add"
-                android:textColor="#000000"
-                android:textSize="17.0sp" />
+                android:textSize="17.0sp"
+                android:textColor="#535353"
+                 />
         </RelativeLayout>
         <!-- android:textColor="#0072e3" -->
     </LinearLayout>
@@ -165,7 +168,9 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:text="@string/more_prompt_1"
-                android:textSize="13.0sp" />
+                android:textSize="13.0sp" 
+                android:textColor="#535353"
+                />
 
             <TextView
                 android:id="@+id/textView10"
@@ -196,8 +201,9 @@
                 android:background="#e3e3e3"
                 android:gravity="center"
                 android:text="@string/more_member_share"
-                android:textColor="#000000"
-                android:textSize="17.0sp" />
+                android:textSize="17.0sp"
+                android:textColor="#535353"
+                 />
 
             <!-- android:textColor="#0072e3" -->
 
@@ -218,8 +224,9 @@
                 android:background="#e3e3e3"
                 android:gravity="center"
                 android:text="@string/more_creator_add"
-                android:textColor="#000000"
-                android:textSize="17.0sp" />
+                android:textSize="17.0sp"
+                android:textColor="#535353"
+                 />
         </RelativeLayout>
         <!-- android:textColor="#0072e3" -->
     </LinearLayout>
