--- a/agree/res/layout/activity_request_code3.xml
+++ b/agree/res/layout/activity_request_code3.xml
@@ -14,7 +14,7 @@
 
         <RelativeLayout
             android:id="@+id/RequestCode3_back_layout"
-            android:layout_width="@dimen/title_left_width"
+            android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true" >
@@ -72,23 +72,25 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/Requestcode3_head"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:gravity="center"
                 android:text="@string/requestcode2_User_nickname"
-                android:textSize="18.0sp" />
+                android:textSize="15.0sp"
+                android:textColor="#535353"
+                 />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/Requestcode2_team_data_layout"
             android:layout_width="match_parent"
-            android:layout_height="120.0dp"
+            android:layout_height="138.0dp"
             android:layout_below="@+id/Requestcode3_head_layout"
             android:layout_centerHorizontal="true" >
 
             <RelativeLayout
                 android:id="@+id/relativeLayout3"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="50.0dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true" >
 
@@ -105,7 +107,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15.0dp"
+                    android:layout_marginTop="25.0dp"
                     android:text="@string/requestcode2_team_data"
                     android:textColor="#808080"
                     android:textSize="13.0sp" />
@@ -114,7 +116,7 @@
             <RelativeLayout
                 android:id="@+id/Requestcode3_number"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="44.0dp"
                 android:layout_below="@+id/relativeLayout3"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/setting_click_selector" >
@@ -164,7 +166,7 @@
             <RelativeLayout
                 android:id="@+id/Requestcode3_introduce"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="44.0dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/Requestcode3_number"
                 android:background="@drawable/setting_click_selector" >
@@ -202,14 +204,14 @@
         <RelativeLayout
             android:id="@+id/relativeLayout7"
             android:layout_width="match_parent"
-            android:layout_height="80.0dp"
+            android:layout_height="94.0dp"
             android:layout_below="@+id/Requestcode2_team_data_layout"
             android:layout_centerHorizontal="true" >
 
             <RelativeLayout
                 android:id="@+id/relativeLayout6"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="50.0dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" >
 
@@ -219,7 +221,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="20.0dp"
-                    android:layout_marginTop="15.0dp"
+                    android:layout_marginTop="25.0dp"
                     android:text="@string/requestcode2_personal"
                     android:textColor="#808080"
                     android:textSize="13.0sp" />
@@ -236,7 +238,7 @@
             <RelativeLayout
                 android:id="@+id/Requestcode3_public_phone"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="44.0dp"
                 android:layout_below="@+id/relativeLayout6"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/setting_click_selector" >
@@ -264,14 +266,14 @@
         <RelativeLayout
             android:id="@+id/relativeLayout11"
             android:layout_width="match_parent"
-            android:layout_height="100.0dp"
+            android:layout_height="94.0dp"
             android:layout_below="@+id/relativeLayout7"
             android:layout_centerHorizontal="true" >
 
             <RelativeLayout
                 android:id="@+id/relativeLayout10"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="50.0dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" >
 
@@ -280,7 +282,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20.0dp"
-                    android:layout_marginTop="15.0dp"
+                    android:layout_marginTop="25.0dp"
                     android:text="@string/requestcode2_operation"
                     android:textColor="#808080"
                     android:textSize="13.0sp" />
@@ -296,7 +298,7 @@
             <RelativeLayout
                 android:id="@+id/Requestcode3_add_team"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="44.0dp"
                 android:layout_below="@+id/relativeLayout10"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/setting_click_selector" >
