--- a/agree/res/layout/activity_sliding.xml
+++ b/agree/res/layout/activity_sliding.xml
@@ -54,7 +54,7 @@
             <RelativeLayout
                 android:id="@+id/SlidingMenu_Team_title_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="52.0dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:background="#efefef" >
@@ -65,7 +65,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="20.0dp"
-                    android:layout_marginTop="15.0dp"
+                    android:layout_marginTop="25.0dp"
                     android:text="小组"
                     android:textColor="#808080"
                     android:textSize="15.0dp" />
@@ -82,7 +82,7 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="80.0dp"
+                android:layout_height="100.0dp"
                 android:layout_below="@+id/SlidingMenu_Team_title_layout"
                 android:layout_centerHorizontal="true"
                 android:background="#ffffff" >
@@ -90,10 +90,11 @@
                 <RelativeLayout
                     android:id="@+id/SlidingMenu_Team_Setting"
                     android:layout_width="match_parent"
-                    android:layout_height="40.0dp"
+                    android:layout_height="50.0dp"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/setting_click_selector" >
+                    android:background="@drawable/setting_click_selector"
+                     >
 
                     <TextView
                         android:id="@+id/textView2"
@@ -128,9 +129,11 @@
                 <RelativeLayout
                     android:id="@+id/SlidingMenu_requestcode"
                     android:layout_width="match_parent"
-                    android:layout_height="40.0dp"
+                    android:layout_height="50.0dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true" >
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/SlidingMenu_Team_Setting"
+                     >
 
                     <TextView
                         android:id="@+id/SlidingMenu_requestcode_code"
@@ -155,7 +158,7 @@
             <RelativeLayout
                 android:id="@+id/SlidingMenu_member_title_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="50.0dp"
                 android:layout_below="@+id/relativeLayout2"
                 android:layout_centerHorizontal="true"
                 android:background="#efefef" >
@@ -166,7 +169,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="20.0dp"
-                    android:layout_marginTop="15.0dp"
+                    android:layout_marginTop="25.0dp"
                     android:text="成员"
                     android:textColor="#808080"
                     android:textSize="15.0dp" />
@@ -185,7 +188,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/SlidingMenu_member_title_layout"
                 android:layout_centerHorizontal="true"
-                android:background="#ffffff" >
+                android:background="#efefef" >
 
                 <ListView
                     android:id="@+id/SlidingMenu_member_listView"
@@ -193,7 +196,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:divider="@null" >
+                    android:divider="@null"
+                    android:background="#ffffff" >
                 </ListView>
             </RelativeLayout>
         </RelativeLayout>
