--- a/agree/res/layout/readuserallfriends_item.xml
+++ b/agree/res/layout/readuserallfriends_item.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="60.0dp"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/alpha" >
+        android:layout_below="@+id/alpha"
+        android:background="#ffffff"
+         >
 
         <TextView
             android:id="@+id/textView2"
