--- a/agree/res/layout/activity_about_us.xml
+++ b/agree/res/layout/activity_about_us.xml
@@ -37,7 +37,9 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="关于我们"
-            android:textSize="18.0sp" />
+            android:textSize="@dimen/title_size"
+            android:textColor="@drawable/title_text_color"
+             />
 
         <TextView
             android:id="@+id/textView3"
@@ -78,11 +80,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/relativeLayout1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="15dp"
             android:text="@string/aboutus_software_name"
             android:gravity="center"
-            android:textSize="20.0sp"
-            android:textColor="#000000"
+            android:textSize="25.0sp"
+            android:textColor="#535353"
              />
 
         <TextView
@@ -91,9 +93,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView1"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="5dp"
             android:text="@string/aboutus_ver"
-            android:textColor="#000000"
+            android:textColor="#535353"
             android:gravity="center"
             android:textSize="15.0sp" />
 
@@ -105,9 +107,9 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
             android:text="@string/aboutus_company_name"
-            android:textColor="#000000"
+            android:textColor="#535353"
             android:gravity="center"
-            android:textSize="20.0sp" />
+            android:textSize="15.0sp" />
 
     </RelativeLayout>
 
