--- a/agree/res/layout/activity_big_map.xml
+++ b/agree/res/layout/activity_big_map.xml
@@ -20,13 +20,14 @@
             android:background="#aaaaaa" />
 
         <RelativeLayout
+            android:id="@+id/Bigmap__navi_layout"
             android:layout_width="@dimen/title_right_width"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
 
             <TextView
-                android:id="@+id/btn_navi"
+                android:id="@+id/Bigmap__navi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -63,5 +64,27 @@
         android:layout_below="@+id/relativeLayout1"
         android:clickable="true" >
     </com.baidu.mapapi.map.MapView>
+
+    <RelativeLayout
+        android:id="@+id/Bigmap_navigation_layout"
+        android:layout_width="match_parent"
+        android:layout_height="50.0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="#88d4cc"
+        >
+
+        <TextView
+            android:id="@+id/Bigmap_navigation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="导航"
+            android:textSize="15.0sp"
+            android:textColor="#ffffff"
+             />
+
+    </RelativeLayout>
 
 </RelativeLayout>
