--- a/agree/res/layout/activity_nickname.xml
+++ b/agree/res/layout/activity_nickname.xml
@@ -81,7 +81,7 @@
                 android:layout_marginTop="35.0dp"
                 android:text="@string/nickname_prompt"
                 android:textColor="#808080"
-                android:textSize="12.0sp" />
+                android:textSize="13.0sp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -94,15 +94,19 @@
 
             <EditText
                 android:id="@+id/Nickname_nickname"
-                android:layout_width="150.0dp"
+                android:layout_width="match_parent"
                 android:layout_height="40.0dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20.0dp"
+                android:layout_marginRight="20.0dp"
                 android:background="@null"
                 android:ems="10"
                 android:gravity="left|center"
                 android:hint="@string/nickname_hint"
-                android:textSize="17.0sp" >
+                android:textSize="15.0sp" 
+                android:textColorHint="#c9c9c9"
+                android:textColor="#000000"
+                >
 
                 <requestFocus />
             </EditText>
@@ -152,7 +156,7 @@
                 android:layout_marginTop="10.0dp"
                 android:text="@string/nickname_prompt_2"
                 android:textColor="#808080"
-                android:textSize="12.0sp" />
+                android:textSize="13.0sp" />
         </RelativeLayout>
     </RelativeLayout>
 
