--- a/agree/res/layout/fragment_common_fragment.xml
+++ b/agree/res/layout/fragment_common_fragment.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/Group_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="42.0dp"
+        android:layout_height="37.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
 
@@ -22,7 +22,7 @@
         <LinearLayout
             android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
-            android:layout_height="40.0dp"
+            android:layout_height="35.0dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:orientation="horizontal" >
@@ -30,13 +30,13 @@
             <RelativeLayout
                 android:id="@+id/tv_1_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1" >
 
                 <TextView
                     android:id="@+id/tv_1"
                     android:layout_width="match_parent"
-                    android:layout_height="40.0dp"
+                    android:layout_height="match_parent"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
                     android:gravity="center"
@@ -49,13 +49,13 @@
             <RelativeLayout
                 android:id="@+id/tv_2_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1" >
 
                 <TextView
                     android:id="@+id/tv_2"
                     android:layout_width="match_parent"
-                    android:layout_height="40.0dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:paddingLeft="30.0dp"
@@ -67,13 +67,13 @@
             <RelativeLayout
                 android:id="@+id/tv_3_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40.0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1" >
 
                 <TextView
                     android:id="@+id/tv_3"
                     android:layout_width="match_parent"
-                    android:layout_height="40.0dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:paddingLeft="30.0dp"
@@ -88,8 +88,9 @@
             android:layout_width="wrap_content"
             android:layout_height="2.0dp"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/linearLayout1"
-             />
+            android:layout_below="@+id/linearLayout1" 
+            android:background="#88d4cc"
+            />
     </RelativeLayout>
 
     <RelativeLayout
