--- a/agree/res/layout/fragment_schedule.xml
+++ b/agree/res/layout/fragment_schedule.xml
@@ -29,46 +29,52 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="+ 组建新的聚会"
-                android:textColor="#ffffff"
-                android:textSize="17.0sp" />
+                android:textColor="#88d4cc"
+                android:textSize="15.0sp" />
         </RelativeLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/schedule_swipe_refresh"
+        <RelativeLayout
+            android:id="@+id/Schedule_swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/Schedule_new_party_layout" >
+            android:layout_above="@+id/Schedule_new_party_layout"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" >
 
-            <ListView
-                android:id="@+id/schedule_listview"
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/schedule_swipe_refresh"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:background="#efefef" >
-            </ListView>
-        </android.support.v4.widget.SwipeRefreshLayout>
+                 >
 
-        <TextView
-            android:id="@+id/Schedule_prompt_new_party"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+                <ListView
+                    android:id="@+id/schedule_listview"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="#efefef" >
+                </ListView>
+            </android.support.v4.widget.SwipeRefreshLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/Schedule_prompt_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_above="@+id/Schedule_new_party_layout"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp"
-            android:text="请添加日程"
-            android:textColor="#00e3e3"
-            android:textSize="17.0sp" />
+            android:visibility="gone" >
 
-        <!--
-             <TextView
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="0.50dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="#aaaaaa" />
-        -->
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="215dp"
+                android:src="@drawable/chat_default_user_avatar" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
