--- a/agree/res/layout/fragment_setting.xml
+++ b/agree/res/layout/fragment_setting.xml
@@ -22,6 +22,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="@string/setting_title_text"
+            android:textColor="@drawable/title_text_color"
             android:textSize="@dimen/title_size" />
 
         <TextView
@@ -48,7 +49,7 @@
             <RelativeLayout
                 android:id="@+id/Setting_head_layout"
                 android:layout_width="match_parent"
-                android:layout_height="200.0dp"
+                android:layout_height="180.0dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" >
 
@@ -60,7 +61,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30.0dp"
                     android:contentDescription="@string/app_name"
-                    android:src="@drawable/yuan_gray_1" />
+                    android:src="@drawable/yuan_green" />
 
                 <RelativeLayout
                     android:layout_width="90.0dp"
@@ -70,17 +71,18 @@
 
                     <ImageView
                         android:id="@+id/Setting_head"
-                        android:layout_width="80.0dp"
-                        android:layout_height="80.0dp"
+                        android:layout_width="85.0dp"
+                        android:layout_height="85.0dp"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:contentDescription="@string/app_name"
-                        android:src="@drawable/login_1" />
+                        android:src="@drawable/login_1"
+                         />
 
                     <ImageView
                         android:id="@+id/Setting_head_1"
-                        android:layout_width="80.0dp"
-                        android:layout_height="80.0dp"
+                        android:layout_width="85.0dp"
+                        android:layout_height="85.0dp"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:contentDescription="@string/app_name"
@@ -105,23 +107,24 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/imageView1"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="15dp"
                     android:gravity="center"
                     android:text="NAME"
-                    android:textSize="18.0sp" />
+                    android:textColor="#535353"
+                    android:textSize="15.0sp" />
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/Setting_User_layout"
                 android:layout_width="match_parent"
-                android:layout_height="200.0dp"
+                android:layout_height="226.0dp"
                 android:layout_below="@+id/Setting_head_layout"
                 android:layout_centerHorizontal="true" >
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout3"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/setting_layout_height"
+                    android:layout_height="@dimen/setting_prompt_layout_height"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true" >
 
@@ -138,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="15.0dp"
+                        android:layout_marginTop="25.0dp"
                         android:text="账户"
                         android:textColor="@drawable/setting_prompt_color"
                         android:textSize="@dimen/setting_size" />
@@ -190,7 +193,7 @@
                         android:layout_toLeftOf="@+id/Setting_next_1"
                         android:gravity="right|center"
                         android:text="姓名"
-                        android:textColor="@drawable/setting_prompt_color"
+                        android:textColor="@drawable/setting_content_color"
                         android:textSize="@dimen/setting_prompt_size" />
                 </RelativeLayout>
 
@@ -198,6 +201,7 @@
                     android:id="@+id/Setting_Sex_change"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/setting_layout_height"
+                    android:layout_below="@+id/Setting_Nickname_change"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/setting_click_selector" >
@@ -240,7 +244,7 @@
                         android:layout_toLeftOf="@+id/Setting_next_2"
                         android:gravity="right|center"
                         android:text="性别"
-                        android:textColor="@drawable/setting_prompt_color"
+                        android:textColor="@drawable/setting_content_color"
                         android:textSize="@dimen/setting_prompt_size" />
                 </RelativeLayout>
 
@@ -290,7 +294,7 @@
                         android:layout_toLeftOf="@+id/Setting_next_3"
                         android:gravity="right|center"
                         android:text="未绑定手机号"
-                        android:textColor="@drawable/setting_prompt_color"
+                        android:textColor="@drawable/setting_content_color"
                         android:textSize="@dimen/setting_prompt_size" />
                 </RelativeLayout>
 
@@ -337,7 +341,7 @@
                         android:layout_marginRight="5.0dp"
                         android:layout_toLeftOf="@+id/Setting_next_4"
                         android:text="未绑定微信号"
-                        android:textColor="@drawable/setting_prompt_color"
+                        android:textColor="@drawable/setting_content_color"
                         android:textSize="@dimen/setting_prompt_size" />
                 </RelativeLayout>
             </RelativeLayout>
@@ -345,14 +349,16 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout7"
                 android:layout_width="match_parent"
-                android:layout_height="120.0dp"
+                android:layout_height="138.0dp"
                 android:layout_below="@+id/Setting_User_layout"
-                android:layout_centerHorizontal="true" >
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"
+                 >
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout6"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/setting_layout_height"
+                    android:layout_height="@dimen/setting_prompt_layout_height"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" >
 
@@ -362,7 +368,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_marginLeft="20.0dp"
-                        android:layout_marginTop="15.0dp"
+                        android:layout_marginTop="25.0dp"
                         android:text="支付"
                         android:textColor="@drawable/setting_prompt_color"
                         android:textSize="@dimen/setting_size" />
@@ -453,14 +459,14 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout9"
                 android:layout_width="match_parent"
-                android:layout_height="120.0dp"
+                android:layout_height="138.0dp"
                 android:layout_below="@+id/relativeLayout7"
                 android:layout_centerHorizontal="true" >
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout8"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/setting_layout_height"
+                    android:layout_height="@dimen/setting_prompt_layout_height"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" >
 
@@ -469,7 +475,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20.0dp"
-                        android:layout_marginTop="15.0dp"
+                        android:layout_marginTop="25.0dp"
                         android:text="关于"
                         android:textColor="@drawable/setting_prompt_color"
                         android:textSize="@dimen/setting_size" />
@@ -560,14 +566,14 @@
             <RelativeLayout
                 android:id="@+id/relativeLayout11"
                 android:layout_width="match_parent"
-                android:layout_height="80.0dp"
+                android:layout_height="96.0dp"
                 android:layout_below="@+id/relativeLayout9"
                 android:layout_centerHorizontal="true" >
 
                 <RelativeLayout
                     android:id="@+id/relativeLayout10"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/setting_layout_height"
+                    android:layout_height="@dimen/setting_prompt_layout_height"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true" >
 
@@ -576,7 +582,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20.0dp"
-                        android:layout_marginTop="15.0dp"
+                        android:layout_marginTop="25.0dp"
                         android:text="其他"
                         android:textColor="@drawable/setting_prompt_color"
                         android:textSize="@dimen/setting_size" />
@@ -605,6 +611,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="20.0dp"
                         android:text="退出登录"
+                        android:textColor="#ff0000"
                         android:textSize="@dimen/setting_size" />
 
                     <TextView
