--- a/agree/res/layout/home_gridview_foot.xml
+++ b/agree/res/layout/home_gridview_foot.xml
@@ -7,7 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true" 
+         android:layout_marginTop="20.0dp"
+        >
 
         <TextView
             android:id="@+id/home_requestcode"
@@ -17,7 +19,8 @@
             android:layout_centerVertical="true"
             android:text="收到了邀请码?"
             android:textColor="#959595"
-            android:textSize="15.0sp" />
+            android:textSize="15.0sp" 
+            />
     </RelativeLayout>
 
 </RelativeLayout>
