--- a/agree/res/layout/home_gridview_item.xml
+++ b/agree/res/layout/home_gridview_item.xml
@@ -3,51 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <ImageView
+        android:id="@+id/home_item_head"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/newteam"
+        android:scaleType="fitXY" />
+    <!--
+              android:layout_marginLeft="10.0dp"
+      		android:layout_marginTop="10.0dp"
+    -->
+
     <RelativeLayout
-        android:layout_width="140.0dp"
-        android:layout_height="140.0dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20.0dp"
-        android:layout_marginRight="20.0dp"
-        android:layout_marginTop="40.0dp"
-        android:background="#d3d3d3" >
+        android:id="@+id/home_item_name_layout"
+        android:layout_width="match_parent"
+        android:layout_height="40.0dp"
+        android:layout_alignBottom="@+id/home_item_head"
+        android:layout_alignLeft="@+id/home_item_head"
+        android:layout_alignRight="@+id/home_item_head"
+        android:background="@drawable/home_text_corners" >
 
-        <ImageView
-            android:id="@+id/home_item_head"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
+        <TextView
+            android:id="@+id/home_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/newteam" />
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="TextView"
+            android:textSize="13.0sp" />
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="match_parent"
-            android:layout_height="40.0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:background="#d3d3d3" >
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="1.0dp" 
-                android:background="#ffffff"
-                >
-
-                <TextView
-                    android:id="@+id/home_item_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:text="TextView"
-                    android:textSize="13.0sp" />
-            </RelativeLayout>
-        </RelativeLayout>
+            android:layout_height="2.0dp"
+            android:layout_alignParentTop="true"
+            android:background="#88d4cc" />
     </RelativeLayout>
 
 </RelativeLayout>
