--- a/agree/res/layout/home_teamadd_item_1.xml
+++ b/agree/res/layout/home_teamadd_item_1.xml
@@ -2,15 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-     <RelativeLayout
-        android:id="@+id/home_teamadd_head_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="180.0dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="10.0dp"
-         >
+     <ImageView
+        android:id="@+id/home_item_head_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/newteam"
+        android:scaleType="fitXY" />
 
-    </RelativeLayout>
 
 </RelativeLayout>
